# devkit

./: README.md  discovery.md  pyproject.toml
src/devkit/: config.py  main.py
src/devkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/devkit/commands/: ai.py  github.py  workflow.py
src/devkit/utils/: check.py  gh.py
